Closed Bug 288921 Opened 21 years ago Closed 21 years ago

[FIX]Media (and XUL) documents have no content-disposition

Categories

(Core :: DOM: Core & HTML, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.8beta2

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

()

Details

Attachments

(1 file)

The problem is that content-disposition is only set in nsContentSink on the document. It should probably happen in RetrieveRelevantHeaders.
To clarify, the steps are: 1) Load http://inconstruction.kairo.at/?d=g&p=2289&f[m]=thumb 2) hit Ctrl-S The suggested filename shouldn't be the hostname.
Attached patch Proposed patch — — Splinter Review
This patch just moves processing of all headers except "link" from the sink into the document, since the sink itself doesn't really need to deal with them. It also moves processing of the "refresh" header for normal loads out of docshell and into the document so that the header won't be processed twice if it's an actual HTTP header (the document needs to process it for the case when it's a <meta> tag). I've tested that refresh still works, both as HTTP and meta tag. The end result is that documents that don't use nsContentSink (XUL and media documents) still get the relevant headers.
Attachment #179590 - Flags: superreview?(jst)
Attachment #179590 - Flags: review?(jst)
Priority: -- → P1
Summary: Media (and XUL) documents have no content-disposition → [FIX]Media (and XUL) documents have no content-disposition
Target Milestone: --- → mozilla1.8beta2
Comment on attachment 179590 [details] [diff] [review] Proposed patch r+sr=jst
Attachment #179590 - Flags: superreview?(jst)
Attachment #179590 - Flags: superreview+
Attachment #179590 - Flags: review?(jst)
Attachment #179590 - Flags: review+
Fixed.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Depends on: 289765
Depends on: 317254
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: