Move processing of various headers from the content sink into the document so it'll happen for all of our document types.  Bug 288921, r+sr=jst